- adjusted  my own connectionstring - fixed migration issue - adjusted correct migrations folder

--- a/GameHog/Web.config
+++ b/GameHog/Web.config
@@ -71,7 +71,7 @@
 
 
   <connectionStrings>
-    <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=DESKTOP-FVTDV3T\SQLEXPRESS;Initial Catalog=StoreGeorge;Integrated Security=true" />
+    <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=DESKTOP-436QBVT\SQLEXPRESS;Initial Catalog=Store;Integrated Security=true" />
   </connectionStrings>
   
   
